# ftrx_lending

./: .gitignore  Anchor.toml  README.md  package-lock.json  tsconfig.json
programs/ftrx_lending/: Cargo.toml
programs/ftrx_lending/src/: errors.rs  lib.rs
programs/ftrx_lending/src/instructions/: mod.rs
programs/ftrx_lending/src/instructions/admin/: admin_liquidates_sp.rs  admin_sets_max_liq_ltv.rs  admin_updates_pool_params.rs  mod.rs
programs/ftrx_lending/src/instructions/user/: mod.rs  suser_borrows.rs  suser_burns_liquid.rs  suser_creates_ua.rs  suser_deposits.rs  suser_liquidates.rs  suser_mints_from_ct.rs.rs  suser_mints_liquid.rs  suser_redeeems_for_ct.rs.rs  suser_redeems.rs  suser_withdraws.rs
programs/ftrx_lending/src/states/: mod.rs  simple_pool.rs  simple_ua.rs
tests/: ftrx_lending.ts
