[package]
name = "ftrx_lending"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ftrx_lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.28.0"
anchor-spl = "=0.28.0"
anchor-attribute-program="=0.28.0"
pyth-solana-receiver-sdk ="=0.1.0"
solana-program = "1.16.25"
ahash = "=0.8.6"

